--- a/POC/PromoEngine/Views/Home/_UIScenarioView.cshtml
+++ b/POC/PromoEngine/Views/Home/_UIScenarioView.cshtml
@@ -2,6 +2,7 @@
 @using Filuet.Hrbl.Ordering.Abstractions.Enums
 @using Filuet.Hrbl.Ordering.Abstractions.Models
 @using Filuet.Hrbl.Ordering.Common;
+@using Filuet.Hrbl.Ordering.POC.PromoEngine;
 
 <style>
     .promoFoundPopup {
@@ -414,7 +415,8 @@
                                     </td>
                                 </tr>
                             </table>
-                            <button type="button" class="btn btn-warning" style="background-color: #fcc578 !important; color: white; width: 80%">PROCEED</button>
+                            @*<button type="button" class="btn btn-warning" style="background-color: #fcc578 !important; color: white; width: 80%">PROCEED</button>*@
+                            @Html.ActionLink("PROCEED", "Submit", "Home", new { uid = Model.First().TestId }, new { @class = "btn btn-warning", @style = "background-color: #fcc578 !important; color: white; width: 80%" })
                         </div>
                     }
                 }
