--- a/POC/PromoEngine/Views/Home/_UIScenarioView.cshtml
+++ b/POC/PromoEngine/Views/Home/_UIScenarioView.cshtml
@@ -35,7 +35,7 @@
         if ('@(Model.First().State == Filuet.Hrbl.Ordering.Abstractions.Models.PromotionsState.Verification)' === 'True') {
 
             // If some promotions are selected and no mandatory promotions that hanen't been chosen
-            @if (Model.Any(x => x.Rewards.Any(r => r.IsSelected)) && !Model.Any(x=>x.VerificationInfo.HasValue && x.VerificationInfo.Value.Item1 == PromotionIssueLevel.Error))
+            @if (Model.Any(x => x.Rewards.Any(r => r.IsSelected)) && !Model.Any(x=>x.VerificationInfo.HasValue && x.VerificationInfo.Value.Item1 == ActionLevel.Error))
             {
                 <text>
                     toastr.success('The selected promotions have been applied to your order');
@@ -46,14 +46,14 @@
             {
                 if (promo.VerificationInfo.HasValue)
                 {
-                    if (promo.VerificationInfo.Value.Item1 == PromotionIssueLevel.Error)
+                    if (promo.VerificationInfo.Value.Item1 == ActionLevel.Error)
                     {
                         <text>
                             errorsUnresolved = 1;
                             toastr.error('@promo.VerificationInfo.Value.Item2');
                         </text>
                     }
-                    else if (promo.VerificationInfo.Value.Item1 == PromotionIssueLevel.Warning)
+                    else if (promo.VerificationInfo.Value.Item1 == ActionLevel.Warning)
                     {
                         <text>
                             toastr.warning('@promo.VerificationInfo.Value.Item2');
@@ -350,7 +350,7 @@
     }
     else if (Model.First().State == PromotionsState.Verification &&
         Model.Any(x => x.Rewards.Any(r => r.IsSelected)) &&
-        !Model.Any(x => x.VerificationInfo.HasValue && x.VerificationInfo.Value.Item1 == PromotionIssueLevel.Error))
+        !Model.Any(x => x.VerificationInfo.HasValue && x.VerificationInfo.Value.Item1 == ActionLevel.Error))
     {
 
         // If some free SKUs were selected or If some CV were selected
