mode RestAPI SDK to a new folder

--- a/POC/PromoEngine/Views/Home/Promotions.cshtml
+++ b/POC/PromoEngine/Views/Home/Promotions.cshtml
@@ -4,5 +4,5 @@
 }
 
 <form method="post" action="/Home/Index">
-    @Html.Partial("_UIScenarioView", Model)
+    @Html.PartialAsync("_UIScenarioView", Model)
 </form>
